[gd_scene load_steps=8 format=3 uid="uid://d0itrmps6gkat"]

[ext_resource type="Script" path="res://Projectiles/explosive_arrow.gd" id="1_5w4ls"]
[ext_resource type="Texture2D" uid="uid://dw023vemho2jm" path="res://assets/Arrow.png" id="1_yethg"]
[ext_resource type="PackedScene" uid="uid://b4xed2d5b6ydp" path="res://explode_area.tscn" id="3_1dypo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtf7n"]
size = Vector2(12, 4)

[sub_resource type="Animation" id="Animation_lr7yb"]
resource_name = "Explode"
length = 1.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ebamm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1inue"]
_data = {
"Explode": SubResource("Animation_lr7yb"),
"RESET": SubResource("Animation_ebamm")
}

[node name="ExplosiveArrow" type="Area2D"]
collision_layer = 4
collision_mask = 18
input_pickable = false
script = ExtResource("1_5w4ls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, 3)
shape = SubResource("RectangleShape2D_gtf7n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yethg")
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_1inue")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ExplodeArea" parent="." instance=ExtResource("3_1dypo")]
position = Vector2(30, 3)

[connection signal="body_entered" from="." to="." method="HitEnemy"]
[connection signal="timeout" from="Timer" to="." method="QueueFree"]
[connection signal="QueueFree" from="ExplodeArea" to="." method="QueueFree"]
